Uleat: Updated returns for Inventory and ItemInst const iterators. (const == const)
Uleat: Replaced 'iter_inst' and 'iter_contents' typedefs with their stl definitions
Uleat: Removed 'limbo' from the 'HasItem' series of checks - including lore checks. The client excludes this range and it causes issues when performing item searches - dupe lore checks were added to account for this.

== 02/03/2015 ==
Trevius: Crashfix for TempName() when numbers are passed at the end of the name.
Uleat: Tweaking of item type exclusions to alleviate strobing conditions with light sources

== 02/02/2015 ==
Akkadius: Implement Packet logs with dumps
	- Category: 41: Packet: Server -> Client With Dump
	- Category: 42: Packet: Server -> Client With Dump
	See: http://wiki.eqemulator.org/p?Logging_System_Overhaul#packet-logging-levels

== 02/01/2015 ==
demonstar55: Add quest debugging to lua
	eq.debug("Test debug level implicit 1")
	eq.debug("Test debug level explicit 1", 1)
	eq.debug("Test debug level explicit 2", 2)
	eq.debug("Test debug level explicit 3", 3)
Akkadius: Add Packet Logging Categories
	- 5 - Packet: Client -> Server - Logs::Client_Server_Packet
	- 39 - Packet: Server -> Client - Logs::Server_Client_Packet
	- 40 - Packet: Client -> Server Unhandled - Logs::Client_Server_Packet_Unhandled
	See: http://wiki.eqemulator.org/p?Logging_System_Overhaul#packet-logging
	
== 01/31/2015 ==
Trevius: Fixed FindGroundZ() and GetGroundZ() to once again utilize the X and Y arguments that are passed to them.

== 01/30/2015 ==
Akkadius: Implemented event type "EVENT_ENVIRONMENTAL_DAMAGE"
	- This event triggers when taking any sort of environmental damage. Example use: 
	sub EVENT_ENVIRONMENTAL_DAMAGE{
		quest::debug("EVENT_ENVIRONMENTAL_DAMAGE");
		quest::debug("env_damage is " . $env_damage);
		quest::debug("env_damage_type is " . $env_damage_type);
		quest::debug("env_final_damage is " . $env_final_damage);
	} 
	Result: (Test falling in Velks): http://i.imgur.com/tPRL7yL.png