@@ -4284,31 +4284,49 @@ void command_goto(Client *c, const Seperator *sep)
 
 void command_iteminfo(Client *c, const Seperator *sep)
 {
-	const ItemInst* inst = c->GetInv()[MainCursor];
-
-	if (!inst)
-		c->Message(13, "Error: You need an item on your cursor for this command");
-	else {
-		const Item_Struct* item = inst->GetItem();
-		c->Message(0, "ID: %i Name: %s",  item->ID, item->Name);
-		c->Message(0, "  Lore: %s  ND: %i  NS: %i  Type: %i",  (item->LoreFlag) ? "true":"false",  item->NoDrop, item->NoRent, item->ItemClass);
-		c->Message(0, "  IDF: %s  Size: %i  Weight: %i  icon_id: %i  Price: %i",  item->IDFile, item->Size, item->Weight, item->Icon, item->Price);
-		if (c->Admin() >= 200)
-			c->Message(0, "MinStatus: %i",  item->MinStatus);
-		if (item->ItemClass==ItemClassBook)
-			c->Message(0, "  This item is a Book: %s",  item->Filename);
-		else if (item->ItemClass==ItemClassContainer)
-			c->Message(0, "  This item is a container with %i slots",  item->BagSlots);
-		else {
-			c->Message(0, "  equipableSlots: %u equipable Classes: %u",  item->Slots, item->Classes);
-			c->Message(0, "  Magic: %i  SpellID: %i  Proc Level: %i DBCharges: %i  CurCharges: %i",  item->Magic, item->Click.Effect, item->Click.Level, item->MaxCharges, inst->GetCharges());
-			c->Message(0, "  EffectType: 0x%02x  CastTime: %.2f",  (uint8) item->Click.Type, (double) item->CastTime/1000);
-			c->Message(0, "  Material: 0x%02x  Color: 0x%08x  Skill: %i",  item->Material, item->Color, item->ItemType);
-			c->Message(0, " Required level: %i Required skill: %i Recommended level:%i",  item->ReqLevel, item->RecSkill, item->RecLevel);
-			c->Message(0, " Skill mod: %i percent: %i",  item->SkillModType, item->SkillModValue);
-			c->Message(0, " BaneRace: %i BaneBody: %i BaneDMG: %i",  item->BaneDmgRace, item->BaneDmgBody, item->BaneDmgAmt);
-		}
+	auto inst = c->GetInv()[MainCursor];
+	if (!inst) { c->Message(13, "Error: You need an item on your cursor for this command"); }
+	auto item = inst->GetItem();
+	if (!item) {
+		Log.Out(Logs::General, Logs::Inventory, "(%s) Command #iteminfo processed an item with no data pointer");
+		c->Message(13, "Error: This item has no data reference");
 	}
+
+	Client::TextLink linker;
+	linker.SetLinkType(linker.linkItemInst);
+	linker.SetItemInst(inst);
+
+	auto item_link = linker.GenerateLink();
+
+	c->Message(0, "*** Item Info for [%s] ***", item_link.c_str());
+	c->Message(0, ">> ID: %u, ItemUseType: %u, ItemClassType: %u", item->ID, item->ItemType, item->ItemClass);
+	c->Message(0, ">> IDFile: '%s', IconID: %u", item->IDFile, item->Icon);
+	c->Message(0, ">> Size: %u, Weight: %u, Price: %u, LDoNPrice: %u", item->Size, item->Weight, item->Price, item->LDoNPrice);
+	c->Message(0, ">> Material: 0x%02X, Color: 0x%08X, Tint: 0x%08X, Light: 0x%02X", item->Material, item->Color, inst->GetColor(), item->Light);
+	c->Message(0, ">> IsLore: %s, LoreGroup: %u, Lore: '%s'", (item->LoreFlag ? "TRUE" : "FALSE"), item->LoreGroup, item->Lore);
+	c->Message(0, ">> NoDrop: %u, NoRent: %u, NoPet: %u, NoTransfer: %u, FVNoDrop: %u",
+		item->NoDrop, item->NoRent, (uint8)item->NoPet, (uint8)item->NoTransfer, item->FVNoDrop);
+
+	if (item->ItemClass == ItemClassBook) {
+		c->Message(0, "*** This item is a Book (filename:'%s') ***", item->Filename);
+	}
+	else if (item->ItemClass == ItemClassContainer) {
+		c->Message(0, "*** This item is a Container (%u slots) ***", item->BagSlots);
+	}
+	else {
+		c->Message(0, "*** This item is Common ***");
+		c->Message(0, ">> Classes: %u, Races: %u, Slots: %u", item->Classes, item->Races, item->Slots);
+		c->Message(0, ">> ReqSkill: %u, ReqLevel: %u, RecLevel: %u", item->RecSkill, item->ReqLevel, item->RecLevel);
+		c->Message(0, ">> SkillModType: %u, SkillModValue: %i", item->SkillModType, item->SkillModValue);
+		c->Message(0, ">> BaneRaceType: %u, BaneRaceDamage: %u, BaneBodyType: %u, BaneBodyDamage: %i",
+			item->BaneDmgRace, item->BaneDmgRaceAmt, item->BaneDmgBody, item->BaneDmgAmt);
+		c->Message(0, ">> Magic: %s, SpellID: %i, ProcLevel: %u, Charges: %u, MaxCharges: %u",
+			(item->Magic ? "TRUE" : "FALSE"), item->Click.Effect, item->Click.Level, inst->GetCharges(), item->MaxCharges);
+		c->Message(0, ">> EffectType: 0x%02X, CastTime: %.2f", (uint8)item->Click.Type, ((double)item->CastTime / 1000));
+	}
+
+	if (c->Admin() >= 200)
+		c->Message(0, ">> MinStatus: %u", item->MinStatus);
 }
 
 void command_uptime(Client *c, const Seperator *sep)
